--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@tsconfig/node20": "^20.1.4",
         "@types/node": "^20.14.5",
         "@vicons/ionicons5": "^0.12.0",
+        "@vicons/utils": "^0.1.4",
         "@vitejs/plugin-vue": "^5.0.5",
         "@vue/eslint-config-prettier": "^9.0.0",
         "@vue/eslint-config-typescript": "^13.0.0",
